syntax = "proto3";

option java_multiple_files = true;
import "google/protobuf/empty.proto";

package com.sadhan.proto;

message JwtRequest{
      string email = 1;
      string password = 2;
}

message JwtResponse{
      string jwtToken = 1;
}


message Employee{
      string id = 1;
      string name = 2;
      string email = 3;
      string phone = 4;
      string department = 5;
}

message User{
  string name = 1;
  string email = 2;
  string password = 3;
  string role = 4;
  string status = 5;
  }

  message CreateUserRequest{

  string name = 1;
  string email = 2;
  string password = 3;
  string role = 4;
  string status = 5;
  }

  message CreateUserResponse{
    string message = 1;
  }

service EmployeeService{
      rpc getEmployeeInfo(google.protobuf.Empty) returns (Employee){}
}

service AuthService{
      rpc authenticate(JwtRequest) returns (JwtResponse){}
}

service UserService{
  rpc createUser(CreateUserRequest) returns (CreateUserResponse){}
}
